<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Piraten Karte</string>
    <string name="sync_cleardata">Lösche alte Daten&#8230;</string>
    <string name="sync_loading">Lade Plakate&#8230;</string>
    <string name="sync_processing">Verabeite Daten&#8230;</string>
    <string name="sync_sending">Sende Änderungen&#8230;</string>
    
    <string name="menu_sync">Datenabgleich</string>
    <string name="menu_add">Marker setzten</string>
    <string name="menu_delete">Marker löschen</string>
    
    <string name="ask_marker_delete">Marker wirklich löschen?</string>
    <string name="marker_kind">Marker Art:</string>
    
    <string name="tvComment">Kommentar</string>
    
    <string name="btSave">Speichern</string>
    
    <string name="choose_marker">Marker Art</string>
    <string name="get_position">Suche aktuelle Position</string>
    <string name="current_accuracy">Genauigkeit %.1f Meter</string>
    
    <string-array name="markertypes">
    	<item>Unbearbeitet</item>
        <item>Plakat hängt</item>
        <item>Plakat wurde gestohlen</item>
        <item>Gute Stelle für ein Plakat</item>
        <item>Plakatwand der Gemeinde</item>
        <item>Plakat an der Plakatwand</item>
        <item>Plakat beschädigt</item>
        <item>A0-Plakat steht</item>
    </string-array>
        <string name="settings">Einstellungen</string>
        <string name="settings_logindata">Login Daten</string>
        <string name="settings_username">Benutzername</string>
        <string name="settings_username_summary"></string>
        <string name="settings_password">Passwort</string>
        <string name="settings_password_summary"></string>
        <string name="behavior">Verhalten</string>    
        <string name="settings_accuracy">Minimale Genauigkeit</string>
        <string name="settings_accuracy_meters">: %.2f Meter</string>
        <string name="settings_accuracy_summary">Gibt an wie genau die aktuelle Position ermittelt werden soll, bevor ein Plakat eingetragen wird.</string>
        
        <string name="setting_server">Server</string>
        <string name="setting_server_summary">Gibt an welcher Server für den Datenabgleich verwendet wird.</string>
        <string name="setting_load_range">Datenabgleich</string>
        <string name="setting_load_range_summary">Gibt an in welchen Umkreis die Plakate geladen werden sollen.</string>
        <string-array name="sync_range_titles">
            <item>20 km</item>
            <item>50 km</item>
            <item>100 km</item>
            <item>200 km</item>
            <item>Alle</item>
        </string-array>
        <string-array name="sync_range">
            <item>20000</item>
            <item>50000</item>
            <item>100000</item>
            <item>200000</item>
            <item>0</item>
        </string-array>
        
        <string name="default_server">https://plakate.piraten-nds.de/</string>
        <string-array name="sync_server_titles">
            <item>BTW - Baden-Württemberg</item>
            <item>BTW - Bayern</item>
            <item>BTW - Berlin</item>
            <item>BTW - Brandenburg</item>
            <item>BTW - Bremen</item>
            <item>BTW - Hamburg</item>
            <item>BTW - Hessen</item>
            <item>BTW - Mecklenburg-Vorpommern</item>
            <item>BTW - Niedersachsen</item>
            <item>BTW - Nordrhein-Westfalen</item>
            <item>BTW - Rheinland-Pfalz</item>
            <item>BTW - Saarland</item>
            <item>BTW - Sachsen</item>
            <item>BTW - Sachsen-Anhalt</item>
            <item>BTW - Schleswig-Holstein</item>
            <item>BTW - Thüringen</item>
            <item>Niedersachsen (alt)</item>
            <item>Nordrhein-Westfalen (Aachen)</item>
            <item>Unterfranken</item>
            <item>KV Rendsburg-Eckernförde</item>
            <item>Niedersachsen (Test Server)</item>
        </string-array>
        <string-array name="sync_server">
            <item>http://btw.piraten-thueringen.de/bw/</item>
            <item>http://btw.piraten-thueringen.de/by/</item>
            <item>http://btw.piraten-thueringen.de/be/</item>
            <item>http://btw.piraten-thueringen.de/bb/</item>
            <item>http://btw.piraten-thueringen.de/hb/</item>
            <item>http://btw.piraten-thueringen.de/hh/</item>
            <item>http://btw.piraten-thueringen.de/he/</item>
            <item>http://btw.piraten-thueringen.de/mv/</item>
            <item>http://btw.piraten-thueringen.de/ni/</item>
            <item>http://btw.piraten-thueringen.de/nw/</item>
            <item>http://btw.piraten-thueringen.de/rp/</item>
            <item>http://btw.piraten-thueringen.de/sl/</item>
            <item>http://btw.piraten-thueringen.de/sn/</item>
            <item>http://btw.piraten-thueringen.de/st/</item>
            <item>http://btw.piraten-thueringen.de/sh/</item>
            <item>http://btw.piraten-thueringen.de/th/</item>
            <item>https://plakate-alt.piraten-nds.de/</item>
            <item>http://pk.piraten-aachen.de/</item>
            <item>https://www.piraten-ufr.de/plakate/</item>
            <item>http://plakate.eckrd.de/</item>
            <item>http://piraten.boombuler.de/</item>
        </string-array>
        <string-array name="server_infos">
            <item>Server für die Bundestagswahl für Baden-Württemberg zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/bw/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Bayern zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/by/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Berlin zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/be/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Brandenburg zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/bb/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Bremen zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/hb/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Hamburg zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/hh/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Hessen zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/he/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Mecklenburg-Vorpommern zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/mv/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Niedersachsen zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/ni/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Nordrhein-Westfalen zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/nw/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Rheinland-Pfalz zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/rp/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Saarland zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/sl/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Sachsen zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/sn/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Sachsen-Anhalt zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/st/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Schleswig-Holstein zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/sh/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für die Bundestagswahl für Thüringen zum Einloggen entweder Wiki-Login benutzen oder &lt;a href=&quot;http://btw.piraten-thueringen.de/th/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für Niedersachsen. Zum Anmelden &lt;a href=&quot;http://plakate.piraten-nds.de/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.</item>
            <item>Server für NRW. Weitere Informationen im &lt;a href=&quot;http://wiki.piratenpartei.de/Plakatkarte_NRW&quot;&gt;Wiki&lt;/a&gt;.&lt;br/&gt;Ansprechpartner: Upuetz, boupirac</item>
            <item>Server für Unterfranken. Zum Anmelden &lt;a href=&quot;https://www.piraten-ufr.de/plakate/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.&lt;br/&gt;Ansprechpartner: SuVuK</item>
            <item>Server für den KV Rendsburg-Eckernförde. Zum Anmelden &lt;a href=&quot;http://plakate.eckrd.de/&quot;&gt;hier&lt;/a&gt; einen Account erstellen.&lt;br/&gt;Ansprechpartner: @kaymar_de</item>
            <item>Test- und Entwicklerserver</item>
        </string-array>
        
        <string name="about_server">Server Info</string>
        <string name="about_server_summary">Zeigt Informationen über den aktuell gewählten Server</string>
        
        <string name="ask_server_change">Wenn der Server geändert wird, werden alle nicht gesendeten Daten verworfen.</string>
        <string name="alert_error">Fehler</string>
        <string name="error_sync_failed">Datenabgleich fehlgeschlagen</string>

        <string name="warn_sync_first">Bevor Sie ein Plakat hinzufügen, wählen Sie bitte einen Server in den Einstellungen aus und synchronisieren sie die Daten.</string>
</resources>
